# advent-2025

./: .gitignore  aoc2025.cabal  cabal.project
app/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs
lib/: Util.hs
lib/Data/: PositionMap.hs  Ranges.hs
lin/C/: glpk.c
lin/Linear/: Solver.hs
